Add Simple Grid and JS, update HTML structure and CSS.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,213 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+svg {
+    fill: white;
+}
+
+svg:hover {
+    fill: gray;
+}
+
+img {
+  max-width: 100%; 
+  height: auto !important;
+}
+
+h1, h2 {
+    margin: 0;
+}
+
+.cover {
+    width: 100%;
+    height: 100%;
+    background: url(/img/coverMed.jpg) center center;
+    background-size: cover;
+    text-align: center;
+    position: relative;
+}
+
+.centerTextAbsolute {
+    width: 665px;
+    height: 150px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.nav {
+    width: 100%;
+    background: black;
+    height: 80px;
+}
+
+.nav ul {
+    list-style: none;
+    text-align: center;
+}
+.nav a {
+    float: left;
+    display: inline-block;
+    padding: 28px 30px;
+    margin: 0;
+    font-size: 20px;
+    font-family: "RobotoThin";
+    text-decoration: none;
+    color: white;
+}
+
+.nav a:hover {
+    color: gray;
+}
+
+.whiteBox {
+    background: white;
+    text-align: center;
+}
+.grayBox {
+    background: #efefef;
+    box-shadow: inset 1px 4px 9px -6px;  
+    position: relative;
+}
+
+.grayBoxGrid {
+    height: 650px; 
+}
+
+.footer {
+    height: 120px;
+    width: 100%;
+    background: #efefef;
+    box-shadow: inset 1px 4px 9px -6px;
+}
+
+.fullwidth {
+    width: 100%;
+    height: 100%;
+}
+
+
+#socialMedia a {
+    padding: 9px 15px;
+}
+
+#aboutMeDiv {
+    text-align: left;
+}
+
+#myPhoto {
+    margin-top: 100px;
+
+}
+
+#logo {
+    font-family: "Geosan";
+    font-size: 30px;
+    color: white;
+    padding: 22.5px 20px;
+
+}
+
+
+#socialMedia {
+    float: right;
+    margin-right: 5px;
+}
+
+#coverName {
+    font-family: "RobotoThin";
+    font-size: 90px;
+    margin: 0;
+}
+
+#coverDes {
+    font-family: "Roboto";
+    font-size: 50px;
+    margin-top: 0; 
+}
+
+#aboutMe {
+    font-family: "Coolvetica";
+    font-size: 80px;
+    font-weight: 100;
+    color: black;
+    margin-top: 80px;
+    margin-bottom: 0;
+}
+
+
+#summary {
+    font-family: "RobotoLight";
+    color: gray;
+    font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+#aboutMeText {
+    font-family: "RobotoLight";
+    color: gray;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+#aboutMeExtra {
+    font-family: "RobotoThin";
+    color: gray;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+#moreList {
+    text-align: left;
+    margin-top: 50px;
+}
+
+#enterprise {
+    opacity: 0.5;
+    margin-top: 50px;
+}
+#moreList h2 {
+    font-family: "RobotoBold";
+
+}
+#moreList li {
+    font-family: "Roboto";
+    padding: 10px;
+}
+
+#moreList ul {
+    padding: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@font-face {
+    font-family: 'Coolvetica'; 
+    src: url('/resources/coolvetica.ttf'); 
+}
+
 @font-face {
     font-family: 'GeosanOblique'; 
     src: url('/resources/GeosansLightOblique.ttf'); 
@@ -28,153 +238,23 @@
     src: url('/resources/RobotoThin.ttf'); 
 }
 
-@font-face {
-    font-family: 'cowboy'; 
-    src: url('/resources/cowboy.ttf'); 
+
+
+@media only screen and (min-width: 600px) {
+    .social-link {
+        display: none;
+    }
+
 }
 
-
-
-html, body {
-    background: #FDFFFC;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-
-/* Classes */
-.container {
-    width: 100%;
-    margin: 0 auto;
-    /*position: relative;*/
-    min-height: 100%;
-    height: 10000px;
+@media only screen and (min-width: 1024px) {
+    .social-link {
+        display: inline-block;
+    }
     
 }
 
-.fullscreen {
-    width: 100%;
-    height: 100%;
-    background: #011627;
-    text-align: center;
-}
-
-.subContainer {
-    height: 1000px;
-    width: 50%;
-    float: left;
-
-}
-
-
-/* Text Styles */
-.bold {
-    font-family: "RobotoBold";
-}
-
-.heading {
-    font-size: 35px;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-.content {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 20px;
-}
-
-
-#coverText {
-    width: 1100px;
-    height: 60px;
-    position: absolute;
-    margin: auto;
-    color: #FF9F1C;
-    font-family: "RobotoThin";
-    font-size: 50px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-}
-
-#aboutMenu {
-    background: #E71D36;
-}
-
-#about {
-    background: white;
-}
-
-#aboutMenuText {
-    color: white;
-    font-family: "cowboy";
-    font-size: 80px;
-    text-align: center;
-    line-height: 1000px;
-    margin: 0 auto;
-}
-
-#myWorkMenuText {
-    color: white;
-    font-family: "cowboy";
-    font-size: 80px;
-    text-align: center;
-    line-height: 1000px;
-    margin: 0 auto;
-}
-
-#myPhoto {
-    width: 100%;
-}
-
-#myWorkMenu {
-    background: #2EC4B6;
-}
 
 
 
-
-
-
-@media (max-width: 1000px) {
-    .subContainer {
-        width: 100%;
-        float: none;
-        height: 1000px;
-    }
-    .menu {
-        height: 300px;
-    }
-    #aboutMenuText {
-        line-height: 300px;
-    }
-
-#myWorkMenuText {
-        line-height: 300px;
-    }
-}
-
-@media (min-width: 1700px) {
-    #myPhoto {
-        width: 850px;
-    }
-    .reactiveCenter {
-        text-align: center;
-    }
-}
-
-@media (min-width: 800px) and (max-width: 1000px) {
-    #myPhoto {
-        width: 800px;
-    }
-    .reactiveCenter {
-        text-align: center;
-    }
-}
 
