Add skills chart and udpate styling

--- a/css/main-min.css
+++ b/css/main-min.css
@@ -63,11 +63,7 @@ h1, h2 {
 
 .grayBox {
   background: #efefef;
-  box-shadow: inset 1px 4px 9px -6px;
-  position: relative; }
-
-.grayBoxGrid {
-  height: 650px; }
+  box-shadow: inset 1px 4px 9px -6px; }
 
 .footer {
   height: 120px;
@@ -154,6 +150,9 @@ h1, h2 {
 #moreList ul {
   padding: 20px; }
 
+#chart {
+  margin-bottom: 40px; }
+
 @font-face {
   font-family: 'Coolvetica';
   src: url("/resources/coolvetica.ttf"); }
@@ -189,3 +188,22 @@ h1, h2 {
 @media only screen and (min-width: 1024px) {
   .social-link {
     display: inline-block; } }
+
+@media only screen and (max-width: 700px) {
+  #coverName {
+    font-family: "RobotoThin";
+    font-size: 40px;
+    margin: 0; }
+  #coverDes {
+    font-family: "Roboto";
+    font-size: 20px;
+    margin-top: 0; }
+  .centerTextAbsolute {
+    width: 300px;
+    height: 70px;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0; } }
