--- a/css/main-min.css
+++ b/css/main-min.css
@@ -75,6 +75,12 @@ h1, h2 {
   width: 100%;
   height: 100%; }
 
+.mobileNav {
+  display: none; }
+
+.mobileNavLinks {
+  display: none; }
+
 #socialMedia a {
   padding: 9px 15px; }
 
@@ -88,7 +94,16 @@ h1, h2 {
   font-family: "Geosan";
   font-size: 30px;
   color: white;
-  padding: 22.5px 20px; }
+  padding: 22.5px 20px;
+  text-decoration: none; }
+
+#mobileLogo {
+  font-family: "Geosan";
+  font-size: 30px;
+  color: white;
+  padding: 22.5px 20px;
+  text-decoration: none;
+  display: inline-block; }
 
 #socialMedia {
   float: right;
@@ -137,7 +152,7 @@ h1, h2 {
   margin-top: 50px; }
 
 #enterprise {
-  opacity: 0.5;
+  /*opacity: 0.5;*/
   margin-top: 50px; }
 
 #moreList h2 {
@@ -191,19 +206,40 @@ h1, h2 {
 
 @media only screen and (max-width: 700px) {
   #coverName {
-    font-family: "RobotoThin";
-    font-size: 40px;
-    margin: 0; }
+    font-size: 40px; }
   #coverDes {
-    font-family: "Roboto";
-    font-size: 20px;
-    margin-top: 0; }
+    font-size: 20px; }
   .centerTextAbsolute {
     width: 300px;
-    height: 70px;
-    position: absolute;
-    margin: auto;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0; } }
+    height: 70px; }
+  .mobileNav {
+    display: block;
+    height: 80px;
+    width: 100%;
+    background: url(/img/burgerIcon.png) no-repeat 98% center;
+    background-color: black;
+    cursor: pointer; }
+  .nav {
+    width: 100%;
+    height: 0;
+    background: gray; }
+  .open {
+    width: 100%;
+    height: auto;
+    background: gray; }
+  .nav a {
+    float: none;
+    display: block;
+    padding: 28px 30px;
+    margin: 0;
+    font-size: 20px;
+    font-family: "RobotoThin";
+    text-decoration: none;
+    color: white;
+    /*border-bottom: 1px solid ;*/ }
+  .nav a:hover {
+    color: black; }
+  #socialMedia {
+    display: none; }
+  #logo {
+    display: none; } }
