--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,13 @@ h1, h2 {
     height: 100%;
 }
 
+.mobileNav {
+    display: none;
+}
+.mobileNavLinks {
+    display: none;
+}
+
 
 #socialMedia a {
     padding: 9px 15px;
@@ -108,7 +115,15 @@ h1, h2 {
     font-size: 30px;
     color: white;
     padding: 22.5px 20px;
-
+    text-decoration: none;
+}
+#mobileLogo {
+    font-family: "Geosan";
+    font-size: 30px;
+    color: white;
+    padding: 22.5px 20px;
+    text-decoration: none;
+    display: inline-block;
 }
 
 
@@ -168,7 +183,7 @@ h1, h2 {
 }
 
 #enterprise {
-    opacity: 0.5;
+    /*opacity: 0.5;*/
     margin-top: 50px;
 }
 #moreList h2 {
@@ -255,27 +270,60 @@ h1, h2 {
 
 @media only screen and (max-width: 700px) {
     #coverName {
-        font-family: "RobotoThin";
         font-size: 40px;
-        margin: 0;
     }
 
     #coverDes {
-        font-family: "Roboto";
         font-size: 20px;
-        margin-top: 0; 
     }
     .centerTextAbsolute {
         width: 300px;
         height: 70px;
-        position: absolute;
-        margin: auto;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
+    }
+
+    .mobileNav {
+        display: block;
+        height: 80px;
+        width: 100%;
+        background: url(/img/burgerIcon.png) no-repeat 98% center;
+        background-color: black;
+        cursor: pointer;
+    }
+
+    .nav {
+        width: 100%;
+        height: 0;
+        background: gray;
+    }
+    .open {
+        width: 100%;
+        height: auto;
+        background: gray;
+    }
+    .nav a {
+        float: none;
+        display: block;
+        padding: 28px 30px;
+        margin: 0;
+        font-size: 20px;
+        font-family: "RobotoThin";
+        text-decoration: none;
+        color: white;
+        /*border-bottom: 1px solid ;*/
+    }
+
+    .nav a:hover {
+        color: black;
+    }
+    #socialMedia {
+        display: none;
     }
     
+
+    #logo {
+        display: none;
+    }
+
 }
 
 
