--- a/css/main-min.css
+++ b/css/main-min.css
@@ -17,6 +17,9 @@ img {
 h1, h2 {
   margin: 0; }
 
+.svgGray {
+  fill: gray; }
+
 .cover {
   width: 100%;
   height: 100%;
@@ -66,10 +69,31 @@ h1, h2 {
   box-shadow: inset 1px 4px 9px -6px; }
 
 .footer {
-  height: 120px;
+  height: 100%;
   width: 100%;
   background: #efefef;
-  box-shadow: inset 1px 4px 9px -6px; }
+  box-shadow: inset 1px 4px 9px -6px;
+  font-family: "RobotoThin";
+  color: gray; }
+
+.footer a {
+  text-decoration: none; }
+
+.footer ul {
+  list-style-type: none;
+  text-align: left; }
+
+.footerGrid {
+  height: 100px;
+  text-align: center; }
+
+.footerCopyright {
+  margin-top: 24.5px;
+  margin-bottom: 24.5px; }
+
+.footerLinks {
+  margin-top: 15px;
+  margin-bottom: 15px; }
 
 .fullwidth {
   width: 100%;
@@ -80,6 +104,10 @@ h1, h2 {
 
 .mobileNavLinks {
   display: none; }
+
+.footerIcons {
+  margin-top: 19.5px;
+  margin-bottom: 19.5px; }
 
 #socialMedia a {
   padding: 9px 15px; }
@@ -197,11 +225,11 @@ h1, h2 {
   src: url("/resources/RobotoThin.ttf"); }
 
 @media only screen and (min-width: 600px) {
-  .social-link {
+  .mobileHide {
     display: none; } }
 
 @media only screen and (min-width: 1024px) {
-  .social-link {
+  .mobileHide {
     display: inline-block; } }
 
 @media only screen and (max-width: 700px) {
@@ -242,4 +270,12 @@ h1, h2 {
   #socialMedia {
     display: none; }
   #logo {
-    display: none; } }
+    display: none; }
+  .footer ul {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0; }
+  .footerGrid {
+    height: 100%;
+    text-align: center; } }
