--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@ h1, h2 {
     margin: 0;
 }
 
+.svgGray {
+    fill: gray;
+}
+
 .cover {
     width: 100%;
     height: 100%;
@@ -78,10 +82,36 @@ h1, h2 {
 }
 
 .footer {
-    height: 120px;
+    height: 100%;
     width: 100%;
     background: #efefef;
     box-shadow: inset 1px 4px 9px -6px;
+    font-family: "RobotoThin";
+    color: gray;
+}
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer ul {
+    list-style-type: none;
+    text-align: left;
+}
+
+.footerGrid {
+    height: 100px;
+    text-align: center;
+}
+
+.footerCopyright {
+    margin-top: 24.5px;
+    margin-bottom: 24.5px;
+}
+
+.footerLinks {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .fullwidth {
@@ -89,11 +119,17 @@ h1, h2 {
     height: 100%;
 }
 
+
 .mobileNav {
     display: none;
 }
 .mobileNavLinks {
     display: none;
+}
+
+.footerIcons {
+    margin-top: 19.5px;
+    margin-bottom: 19.5px;
 }
 
 
@@ -255,14 +291,14 @@ h1, h2 {
 
 
 @media only screen and (min-width: 600px) {
-    .social-link {
+    .mobileHide {
         display: none;
     }
 
 }
 
 @media only screen and (min-width: 1024px) {
-    .social-link {
+    .mobileHide {
         display: inline-block;
     }
     
@@ -322,6 +358,17 @@ h1, h2 {
 
     #logo {
         display: none;
+    }
+
+    .footer ul {
+        list-style-type: none;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+    .footerGrid {
+        height: 100%;
+        text-align: center;
     }
 
 }
