--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ h1, h2 {
 .whiteBox {
     background: white;
     text-align: center;
+    box-shadow: inset 1px 4px 9px -6px;
 }
 .grayBox {
     background: #efefef;
