Update README and small styling tweaks

--- a/css/main-min.css
+++ b/css/main-min.css
@@ -1,282 +1,1 @@
-html, body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0; }
-
-svg {
-  fill: white; }
-
-svg:hover {
-  fill: gray; }
-
-img {
-  max-width: 100%;
-  height: auto !important; }
-
-h1, h2 {
-  margin: 0; }
-
-.svgGray {
-  fill: gray; }
-
-.cover {
-  width: 100%;
-  height: 100%;
-  background: url(/img/coverMed.jpg) center center;
-  background-size: cover;
-  text-align: center;
-  position: relative; }
-
-.centerTextAbsolute {
-  width: 665px;
-  height: 150px;
-  position: absolute;
-  margin: auto;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0; }
-
-.nav {
-  width: 100%;
-  background: black;
-  height: 80px; }
-
-.nav ul {
-  list-style: none;
-  text-align: center; }
-
-.nav a {
-  float: left;
-  display: inline-block;
-  padding: 28px 30px;
-  margin: 0;
-  font-size: 20px;
-  font-family: "RobotoThin";
-  text-decoration: none;
-  color: white; }
-
-.nav a:hover {
-  color: gray; }
-
-.whiteBox {
-  background: white;
-  text-align: center;
-  box-shadow: inset 1px 4px 9px -6px; }
-
-.grayBox {
-  background: #efefef;
-  box-shadow: inset 1px 4px 9px -6px; }
-
-.footer {
-  height: 100%;
-  width: 100%;
-  background: #efefef;
-  box-shadow: inset 1px 4px 9px -6px;
-  font-family: "RobotoThin";
-  color: gray; }
-
-.footer a {
-  text-decoration: none; }
-
-.footer ul {
-  list-style-type: none;
-  text-align: left; }
-
-.footerGrid {
-  height: 100px;
-  text-align: center; }
-
-.footerCopyright {
-  margin-top: 24.5px;
-  margin-bottom: 24.5px; }
-
-.footerLinks {
-  margin-top: 15px;
-  margin-bottom: 15px; }
-
-.fullwidth {
-  width: 100%;
-  height: 100%; }
-
-.mobileNav {
-  display: none; }
-
-.mobileNavLinks {
-  display: none; }
-
-.footerIcons {
-  margin-top: 19.5px;
-  margin-bottom: 19.5px; }
-
-#socialMedia a {
-  padding: 9px 15px; }
-
-#aboutMeDiv {
-  text-align: left; }
-
-#myPhoto {
-  margin-top: 100px; }
-
-#logo {
-  font-family: "Geosan";
-  font-size: 30px;
-  color: white;
-  padding: 22.5px 20px;
-  text-decoration: none; }
-
-#mobileLogo {
-  font-family: "Geosan";
-  font-size: 30px;
-  color: white;
-  padding: 22.5px 20px;
-  text-decoration: none;
-  display: inline-block; }
-
-#socialMedia {
-  float: right;
-  margin-right: 5px; }
-
-#coverName {
-  font-family: "RobotoThin";
-  font-size: 90px;
-  margin: 0; }
-
-#coverDes {
-  font-family: "Roboto";
-  font-size: 50px;
-  margin-top: 0; }
-
-#aboutMe {
-  font-family: "Coolvetica";
-  font-size: 80px;
-  font-weight: 100;
-  color: black;
-  margin-top: 80px;
-  margin-bottom: 0; }
-
-#summary {
-  font-family: "RobotoLight";
-  color: gray;
-  font-size: 30px;
-  margin-top: 30px;
-  margin-bottom: 0; }
-
-#aboutMeText {
-  font-family: "RobotoLight";
-  color: gray;
-  font-size: 20px;
-  margin-top: 30px;
-  margin-bottom: 0; }
-
-#aboutMeExtra {
-  font-family: "RobotoThin";
-  color: gray;
-  font-size: 20px;
-  margin-top: 30px; }
-
-#moreList {
-  text-align: left;
-  margin-top: 50px; }
-
-#enterprise {
-  /*opacity: 0.5;*/
-  margin-top: 50px; }
-
-#moreList h2 {
-  font-family: "RobotoBold"; }
-
-#moreList li {
-  font-family: "Roboto";
-  padding: 10px; }
-
-#moreList ul {
-  padding: 20px; }
-
-#chart {
-  margin-bottom: 40px; }
-
-@font-face {
-  font-family: 'Coolvetica';
-  src: url("/resources/coolvetica.ttf"); }
-
-@font-face {
-  font-family: 'GeosanOblique';
-  src: url("/resources/GeosansLightOblique.ttf"); }
-
-@font-face {
-  font-family: 'Geosan';
-  src: url("/resources/GeosansLight.ttf"); }
-
-@font-face {
-  font-family: 'Roboto';
-  src: url("/resources/RobotoRegular.ttf"); }
-
-@font-face {
-  font-family: 'RobotoLight';
-  src: url("/resources/RobotoLight.ttf"); }
-
-@font-face {
-  font-family: 'RobotoBold';
-  src: url("/resources/RobotoBold.ttf"); }
-
-@font-face {
-  font-family: 'RobotoThin';
-  src: url("/resources/RobotoThin.ttf"); }
-
-@media only screen and (min-width: 600px) {
-  .mobileHide {
-    display: none; } }
-
-@media only screen and (min-width: 1024px) {
-  .mobileHide {
-    display: inline-block; } }
-
-@media only screen and (max-width: 700px) {
-  #coverName {
-    font-size: 40px; }
-  #coverDes {
-    font-size: 20px; }
-  .centerTextAbsolute {
-    width: 300px;
-    height: 70px; }
-  .mobileNav {
-    display: block;
-    height: 80px;
-    width: 100%;
-    background: url(/img/burgerIcon.png) no-repeat 98% center;
-    background-color: black;
-    cursor: pointer; }
-  .nav {
-    width: 100%;
-    height: 0;
-    background: gray; }
-  .open {
-    width: 100%;
-    height: auto;
-    background: gray; }
-  .nav a {
-    float: none;
-    display: block;
-    padding: 28px 30px;
-    margin: 0;
-    font-size: 20px;
-    font-family: "RobotoThin";
-    text-decoration: none;
-    color: white;
-    /*border-bottom: 1px solid ;*/ }
-  .nav a:hover {
-    color: black; }
-  #socialMedia {
-    display: none; }
-  #logo {
-    display: none; }
-  .footer ul {
-    list-style-type: none;
-    text-align: center;
-    margin: 0;
-    padding: 0; }
-  .footerGrid {
-    height: 100%;
-    text-align: center; } }
+html,body{width:100%;height:100%;padding:0;margin:0}svg{fill:white}svg:hover{fill:gray}img{max-width:100%;height:auto !important}h1,h2{margin:0}.svgGray{fill:gray}.cover{width:100%;height:100%;background:url(/img/coverMed.jpg) center center;background-size:cover;text-align:center;position:relative}.centerTextAbsolute{width:665px;height:150px;position:absolute;margin:auto;left:0;top:0;bottom:0;right:0}.mobileHide{display:inline-block}.nav{width:100%;background:black;height:80px}.nav ul{list-style:none;text-align:center}.nav a{float:left;display:inline-block;padding:28px 30px;margin:0;font-size:20px;font-family:"RobotoThin";text-decoration:none;color:white}.nav a:hover{color:gray}.whiteBox{background:white;text-align:center;box-shadow:inset 1px 4px 9px -6px}.grayBox{background:#efefef;box-shadow:inset 1px 4px 9px -6px}.footer{height:100%;width:100%;background:#efefef;box-shadow:inset 1px 4px 9px -6px;font-family:"RobotoThin";color:gray}.footer a{text-decoration:none}.footer ul{list-style-type:none;text-align:left}.footerGrid{height:100px;text-align:center}.footerCopyright{margin-top:24.5px;margin-bottom:24.5px}.footerLinks{margin-top:15px;margin-bottom:15px}.fullwidth{width:100%;height:100%}.mobileNav{display:none}.mobileNavLinks{display:none}.footerIcons{margin-top:19.5px;margin-bottom:19.5px}#socialMedia a{padding:9px 15px}#aboutMeDiv{text-align:left}#myPhoto{margin-top:100px}#logo{font-family:"Geosan";font-size:30px;color:white;padding:22.5px 20px;text-decoration:none}#mobileLogo{font-family:"Geosan";font-size:30px;color:white;padding:22.5px 20px;text-decoration:none;display:inline-block}#socialMedia{float:right;margin-right:5px}#coverName{font-family:"RobotoThin";font-size:90px;margin:0}#coverDes{font-family:"Roboto";font-size:50px;margin-top:0}#aboutMe{font-family:"Coolvetica";font-size:80px;font-weight:100;color:black;margin-top:80px;margin-bottom:0}#summary{font-family:"RobotoLight";color:gray;font-size:30px;margin-top:30px;margin-bottom:0}#aboutMeText{font-family:"RobotoLight";color:gray;font-size:20px;margin-top:30px;margin-bottom:0}#aboutMeExtra{font-family:"RobotoThin";color:gray;font-size:20px;margin-top:30px}#moreList{text-align:left;margin-top:50px}#enterprise{margin-top:50px}#moreList h2{font-family:"RobotoBold"}#moreList li{font-family:"Roboto";padding:10px}#moreList ul{padding:20px}#chart{margin-bottom:40px}@font-face{font-family:'Coolvetica';src:url("/resources/coolvetica.ttf")}@font-face{font-family:'GeosanOblique';src:url("/resources/GeosansLightOblique.ttf")}@font-face{font-family:'Geosan';src:url("/resources/GeosansLight.ttf")}@font-face{font-family:'Roboto';src:url("/resources/RobotoRegular.ttf")}@font-face{font-family:'RobotoLight';src:url("/resources/RobotoLight.ttf")}@font-face{font-family:'RobotoBold';src:url("/resources/RobotoBold.ttf")}@font-face{font-family:'RobotoThin';src:url("/resources/RobotoThin.ttf")}@media only screen and (max-width: 1024px){.mobileHide{display:none}}@media only screen and (max-width: 700px){#coverName{font-size:40px}#coverDes{font-size:20px}.centerTextAbsolute{width:300px;height:70px}.mobileNav{display:block;height:80px;width:100%;background:url(/img/burgerIcon.png) no-repeat 98% center;background-color:black;cursor:pointer}.nav{width:100%;height:0;background:gray}.open{width:100%;height:auto;background:gray}.nav a{float:none;display:block;padding:28px 30px;margin:0;font-size:20px;font-family:"RobotoThin";text-decoration:none;color:white}.nav a:hover{color:black}#socialMedia{display:none}#logo{display:none}}@media only screen and (max-width: 770px){.footer ul{list-style-type:none;text-align:center;margin:0;padding:0}.footerGrid{height:100%;text-align:center}}
