--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ h1, h2 {
 }
 
 .projectTile {
+    position: relative;
     width: 50%;
     height: 500px;   
 }
@@ -182,6 +183,30 @@ h1, h2 {
 
 .blueButton:active {
     background: #727272;
+}
+
+.boxText {
+    position: absolute;
+    width: 460px;
+    height: 175px;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.boxText h1 {
+    font-family: "RobotoThin";
+    font-size: 60px;
+    margin: 0;
+}
+.boxText p {
+    font-family: "Roboto";
+    margin-top: 10px;
+}
+
+.whiteText {
+    color: white;
 }
 
 
