Remove codekit and add portfoio tiles

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h1, h2 {
 .projectTile {
     position: relative;
     width: 50%;
-    height: 500px;   
+    height: 50vh;   
 }
 
 
@@ -379,6 +379,11 @@ h1, h2 {
     background-size: cover;
 }
 
+/*#portfolio .grid {
+    max-width: 5000px;
+    min-width: 0px;
+}*/
+
 
 
 
@@ -429,6 +434,15 @@ h1, h2 {
 @media only screen and (max-width: 1024px) {
     .mobileHide {
         display: none;
+    }
+
+}
+
+@media only screen and (max-width: 940px) {
+    .projectTile {
+        position: relative;
+        width: 100%;
+        height: 50vh;   
     }
 
 }
@@ -491,6 +505,28 @@ h1, h2 {
     
     #logo {
         display: none;
+    }
+
+    .boxText {
+    position: absolute;
+    width: 310px;
+    height: 90px;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    }
+    .boxText h1 {
+        font-family: "RobotoThin";
+        font-size: 30px;
+        margin: 0;
+    }
+    .boxText p {
+        display: none;
+    }
+    .projectTile {
+        margin: 0 auto;
     }
 }
 /* Auto height footer and center align elements in footer at max 770px */
